# bioinformatics-homedepot

./: .gitignore  LICENSE  pyproject.toml
src/homedepot/: argutils.py  downsample_fragment_file.py  gtf_to_bed.py  logger.py
tests/: gencode.v28.annotation.promoter.bed  hg38.nochrM.chrom.sizes
