[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioinformatics-homedepot"
version = "0.1.0"
description = "A set of tools for daily bioinformatics tasks"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Bing Yang", email = "yangbing.pku@gmail.com" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.1",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.3",
]

[project.scripts]
gtf-to-bed = "homedepot.gtf_to_bed:main"
downsample-frag = "homedepot.downsample_fragment_file:main"
